--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
+    "classnames": "^2.3.2",
+    "destyle.css": "^4.0.0",
     "eslint-plugin-prettier": "^4.2.1",
     "next": "^13.1.2",
     "prettier": "^2.6.2",
@@ -16,11 +19,15 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "eslint": "7.29.0",
     "eslint-config-next": "^13.1.2",
     "eslint-config-prettier": "^8.6.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "typescript": "^4.9.4"
   }
 }
